@@ -31,7 +31,6 @@ my %WriteMakefileArgs = (
     "HTTP::Request::Common" => 0,
     "LWP::UserAgent" => 0,
     "Pod::Usage" => 0,
-    "Scalar::Util" => "1.14",
     "Tie::RefHash" => 0,
     "URI::URL" => 0,
     "URI::file" => 0,
@@ -53,7 +52,6 @@ my %WriteMakefileArgs = (
     "Test::Memory::Cycle" => 0,
     "Test::More" => "0.96",
     "Test::Output" => 0,
-    "Test::Taint" => "1.08",
     "Test::Warnings" => 0,
     "URI" => 0,
     "URI::Escape" => 0,
@@ -87,13 +85,11 @@ my %FallbackPrereqs = (
   "LWP::UserAgent" => 0,
   "Path::Tiny" => 0,
   "Pod::Usage" => 0,
-  "Scalar::Util" => "1.14",
   "Test::Deep" => 0,
   "Test::Fatal" => 0,
   "Test::Memory::Cycle" => 0,
   "Test::More" => "0.96",
   "Test::Output" => 0,
-  "Test::Taint" => "1.08",
   "Test::Warnings" => 0,
   "Tie::RefHash" => 0,
   "URI" => 0,
