@@ -12,7 +12,6 @@ requires "HTTP::Request" => "1.30";
 requires "HTTP::Request::Common" => "0";
 requires "LWP::UserAgent" => "0";
 requires "Pod::Usage" => "0";
-requires "Scalar::Util" => "1.14";
 requires "Tie::RefHash" => "0";
 requires "URI::URL" => "0";
 requires "URI::file" => "0";
@@ -36,7 +35,6 @@ on 'test' => sub {
   requires "Test::Memory::Cycle" => "0";
   requires "Test::More" => "0.96";
   requires "Test::Output" => "0";
-  requires "Test::Taint" => "1.08";
   requires "Test::Warnings" => "0";
   requires "URI" => "0";
   requires "URI::Escape" => "0";
